# whisper-dictation

./: .gitignore  .warp-cli.config  CLAUDE.md  CONFLUENCE_HELPERS.md  GEMINI.md  README.md  _test_recording_advanced.py  _test_whisper_performance.py  check_models.py  current_context.md  debug_transcriptions.py  device_manager.py  fix_remaining_tests.md  model_loading_fix.md  mps_optimizer.py  pyproject.toml  pytest.ini  recorder.py  requirements.txt  run_tdd_red_phase.py  transcriber.py  whisper-dictation-fast.py  whisper-dictation-optimized.py  whisper-dictation-wrapper.sh  whisper-dictation.py
.github/workflows/: tests.yml
.windsurf/rules/: memory-bank-rule.md
docs/: .cleanup-task.md  API_INTERFACES.md  ARCHITECTURE.md  DATA_FLOW.md  DOCUMENTATION_PLAN.md  FILE_INVENTORY.md  MODULES.md  PROJECT_OVERVIEW.md  README.md  SYSTEM_INTEGRATION.md  TECHNICAL_DEBT.md
docs/.tasks/: 20251010_1434_DEBT_REFACTOR.md  20251010_1434_FILE_INVENTORY.md  20251010_1434_MODULES.md  20251010_1726_FIX_system_overview.md  20251010_1731_ENHANCE_overview.md  20251010_1745_FIX_OVERVIEW_ENHANCEMENT.md  20251010_1801_DIAGRAMS_dataflow.md  20251010_1803_DIAGRAMS_modules.md  20251010_1804_DIAGRAMS_module_docs.md  20251010_1843_QA_REVIEW.md  20251010_2055_FIX_overview_duplicates.md  20251010_2056_FIX_dataflow_numbering.md  20251010_2110_SYSTEM_INTEGRATION_DIAGRAM.md  QA_REPORT_20251010.md  QA_REPORT_20251010_1843.md  STATUS.md
docs/architecture/: IMPLEMENTATION.md  RISKS.md
docs/diagrams/: architecture-layers.mmd  sequence-error-handling.mmd  sequence-main-flow.mmd  system-overview.mmd
docs/modules/: README.md  device_manager.md  recorder.md  transcriber.md
docs/processes/: main_flow_steps.md  (+1 more)
memory-bank/: Readme_MB.md  issues-backlog.md
openspec/: project.md
scripts/: README.md  check-links.py  check_models.py  confluence_mermaid_helper.py  confluence_section_helper.py  debug_transcriptions.py  run_tdd_red_phase.py  setup-docs-mvp.sh  start_whisper.sh  tmp_rovodev_measure_start_silence.py  warp-run.sh
specs/: 20250130_m1_support_fix.md  20250729_transcription_performance_fix.md  20250730_multilingual_speech_improvement.md  20250730_project_cleanup.md  20250730_sound_and_shortcut_fix.md  20251019_cpp_tests_spec.md  20251020_audio_clipping_warmup_fix.md  20251021_macos_portability_improvements.md  20251023_rename_fast_to_metal.md  [02-00-00]_whisper_cpp_quality_fix.md  [04-00-00]_documentation_plan.md  [07-00-00]_cpp_tests_spec.md  [13-00-00]_lessons_learned_foundation.md  [13-01-00]_lock_file_signal_handling.md  [13-01-02]_signal_handlers.md  [13-02-00]_microphone_proactive_check.md  [13-02-01]_microphone_verification.md  [13-02-02]_microphone_tests.md  [13-03-00]_audio_watchdog.md  [13-03-02]_stall_detection.md  [13-03-03]_stream_recovery.md  [13-03-04]_watchdog_tests.md  [13-04-00]_enhanced_logging_diagnostics.md  [13-05-00]_lessons_learned_tests.md  [13-05-02]_integration_tests.md  [13-05-04]_test_infrastructure.md
temp/: current_plan.md  documentation_enhancement_plan.md  documentation_personality.md
tests/: conftest.py  record_test_samples.py  test_audio_watchdog.py  test_integration_recording.py  test_language_detection.py  test_lock_file.py  test_lock_file_integration.py  test_logging.py  test_microphone_check.py  test_performance.py  test_recording_quality.py  test_whisper_cpp.py
(+131 files in other folders)
