[tool.poetry]
name = "whisper-dictation"
version = "0.1.0"
description = "Multilingual Dictation App based on OpenAI Whisper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyaudio = "^0.2.13"
openai = "^0.28.1"
# without this, poetry will attempt to install `triton` which is not available for macos
# Updated to latest stable version for better M1 compatibility
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "v20231117" }
llvmlite = "0.41.0"
numba = "0.58.0"
rumps = "^0.4.0"
pynput = "^1.7.6"
# PyTorch z obsługą MPS dla M1 - upgraded for better MPS compatibility
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"

[tool.poetry.scripts]
whisper = "whisper-dictation:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
librosa = "^0.11.0"
psutil = "^7.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "temp",
]
